# makiatto

./: .gitattributes  .gitignore  .mise.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  release-plz.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  docs.yml
benches/: README.md  axum_control.Dockerfile  bench.sh  debian_bench.Dockerfile  makiatto.bench.toml
benches/axum-control/: Cargo.toml
benches/axum-control/src/: main.rs
crates/makiatto/: CHANGELOG.md  Cargo.toml  build.rs
crates/makiatto-cli/: CHANGELOG.md  Cargo.toml
crates/makiatto-cli/src/: config.rs  const.rs  constants.rs  dns.rs  health.rs  lib.rs  machine.rs  main.rs  peer.rs  ssh.rs  sync.rs  ui.rs  wasm.rs
crates/makiatto-cli/src/machine/: corrosion.rs  geolocation.rs  provision.rs  sync.rs
crates/makiatto/migrations/: 001_initial_schema.sql  002_wasm_support.sql  003_node_health.sql
crates/makiatto/schemas/: README.md  schema.sql
crates/makiatto/src/: cache.rs  config.rs  consensus.rs  constants.rs  corrosion.rs  dns.rs  fs.rs  lib.rs  main.rs  o11y.rs  service.rs  subscriptions.rs  util.rs  utils.rs  web.rs  wireguard.rs
crates/makiatto/src/corrosion/: consensus.rs  health.rs  schema.rs  subscriptions.rs
crates/makiatto/src/fs/: reconcile.rs  watcher.rs
crates/makiatto/src/web/: axum.rs  certificate.rs  dns.rs  extract.rs  image.rs  images.rs  metrics.rs  wasm.rs
crates/makiatto/src/web/certificate/: acme.rs  store.rs
crates/makiatto/src/web/extract/: host.rs
crates/makiatto/src/web/wasm/: functions.rs  transforms.rs
crates/makiatto/wit/: http.wit  transform.wit
crates/makiatto/wit/http/: http-handler.wit
crates/makiatto/wit/transform/: transform.wit
docs/: book.toml  otel-collector-spanmetrics.yaml
docs/src/: SUMMARY.md  faq.md  getting-started.md  introduction.md  observability.md  usage-guide.md
docs/src/introduction/: installation.md
docs/src/usage-guide/: wasm.md
tests/: Cargo.toml  build.rs
tests/.ssh/: id_ed25519
tests/dockerfiles/: makiatto_builder.Dockerfile  ubuntu_base.Dockerfile  ubuntu_daemon.Dockerfile
tests/fixtures/: makiatto-local.toml  makiatto.local.toml  makiatto.toml
tests/fixtures/.ssh/: id_ed25519.pub
tests/fixtures/wasm/: Cargo.toml  simple-handler.wasm  simple-transformer.wasm  ssrf-test.wasm
tests/fixtures/wasm-components/: Cargo.toml  wit
tests/fixtures/wasm-components/src/: bindings.rs  lib.rs
tests/fixtures/wasm/simple-handler-component/: Cargo.toml
tests/fixtures/wasm/simple-handler-component/src/: bindings.rs  lib.rs
tests/fixtures/wasm/simple-handler-component/wit/: http.wit
tests/fixtures/wasm/simple-transformer-component/: Cargo.toml
tests/fixtures/wasm/simple-transformer-component/src/: bindings.rs  lib.rs
tests/fixtures/wasm/simple-transformer-component/wit/: transform.wit
tests/fixtures/wasm/ssrf-test-component/: Cargo.toml
tests/fixtures/wasm/ssrf-test-component/src/: lib.rs
tests/src/: container.rs  e2e.rs  integration.rs  lib.rs
tests/src/e2e/: acme.rs  axum.rs  certificate.rs  consensus.rs  corrosion.rs  dns.rs  fs.rs  machine_init.rs  provision.rs  sync.rs  web.rs
tests/src/integration/: acme.rs  axum.rs  certificate.rs  consensus.rs  corrosion.rs  dns.rs  fs.rs  health.rs  images.rs  wasm.rs
