[workspace]
members = ["benches/*", "crates/*", "tests"]
exclude = ["tests/fixtures/*"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/halcyonnouveau/makiatto"
homepage = "https://halcyonnouveau.github.io/makiatto/"
keywords = ["cdn", "cli", "deployment", "mesh", "infrastructure"]
categories = ["command-line-utilities", "network-programming"]

[workspace.dependencies]
# CLI
argh = "0.1"
console = "0.16"
dialoguer = "0.12"
dirs = "6"
indicatif = "0.18"

# Async runtime
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.48", features = ["full"] }
tokio-util = "0.7"

# Error handling
miette = { version = "7.6", features = ["fancy"] }
thiserror = "2.0"

# Serialisation
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
toml = "0.9"

# Cryptography
base64 = "0.22"
blake3 = "1.8"
crc32fast = "1.5"
x25519-dalek = { version = "2.0", features = ["getrandom", "static_secrets"] }

# Database
sqlx = { git = "https://github.com/launchbadge/sqlx", features = [
    "runtime-tokio",
    "sqlite",
] }

# WASM Runtime
wasmtime = "39.0"
wasmtime-wasi = "39.0"

# DNS
hickory-proto = "0.25"
hickory-resolver = "0.25"
hickory-server = { version = "0.25", features = [
    "tls-aws-lc-rs",
    "quic-aws-lc-rs",
] }
maxminddb = "0.26"

# Web
axum = "0.8"
axum-extra = "0.12"
hyper = "1.8"
hyper-util = "0.1"
http = "1.3"
instant-acme = "0.8"
rustls = "0.23"
rustls-pemfile = "2.2"
tokio-rustls = "0.26"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-full"] }

# O11y
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31", features = ["metrics", "logs"] }
opentelemetry-appender-tracing = "0.31"
opentelemetry_sdk = { version = "0.31", features = [
    "rt-tokio",
    "metrics",
    "logs",
] }
opentelemetry-otlp = { version = "0.31", features = [
    "metrics",
    "logs",
    "grpc-tonic",
] }

# Utilities
camino = "1.2"
dashmap = "6.1"
defguard_wireguard_rs = "0.7"
flate2 = "1.0"
geo = "0.31"
globset = "0.4"
indoc = "2.0"
jiff = "0.2"
notify-debouncer-full = "0.6"
rand = "0.9"
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "rustls-tls",
    "http2",
], default-features = false }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
tar = "0.4"
url = "2.5"
uuid = { version = "1.19", features = ["v7"] }

# Corrosion
corro-agent = { git = "https://github.com/superfly/corrosion" }
corro-types = { git = "https://github.com/superfly/corrosion" }
tripwire = { git = "https://github.com/superfly/corrosion" }

# Image processing
imageflow_core = { git = "https://github.com/imazen/imageflow" }
imageflow_types = { git = "https://github.com/imazen/imageflow" }
moka = { version = "0.12", features = ["future"] }

# Testing
ctor = "0.6"
testcontainers = "0.25"
tokio-test = "0.4"

[patch.crates-io]
# Patch dependencies for imageflow
rgb = { git = "https://github.com/kornelski/rust-rgb" }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 2
strip = "symbols"
panic = "abort"

[profile.dev]
debug = 1
incremental = true
codegen-units = 256

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'

[profile.test.package.backtrace]
opt-level = 2

[workspace.lints.rust]
missing_copy_implementations = "warn"
non_snake_case = "warn"
non_upper_case_globals = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
dbg_macro = "warn"
unimplemented = "warn"
use_self = "warn"

too_many_lines = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
