[package]
name = "integration-tests"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
makiatto-cli = { path = "../crates/makiatto-cli" }

base64 = { workspace = true }
blake3 = { workspace = true }
ctor = { workspace = true }
jiff = { workspace = true }
miette = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
miette = { workspace = true }

[features]
docker-build = []

[lints]
workspace = true
