[package]
name = "makiatto-cli"
version = { workspace = true }
edition = "2024"
description = "CLI tool for managing Makiatto CDN deployments"
license = "MIT OR Apache-2.0"
repository = "https://github.com/halcyonnouveau/makiatto"
homepage = "https://github.com/halcyonnouveau/makiatto"
documentation = "https://halcyonnouveau.github.io/makiatto/"
readme = "../../README.md"
keywords = ["cdn", "cli", "deployment", "mesh", "infrastructure"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
argh = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "process"] }
toml = { workspace = true }
ssh2 = { workspace = true }
camino = { workspace = true }
base64 = { workspace = true }
x25519-dalek = { workspace = true }
indoc = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
