[package]
name = "makiatto-cli"
description = "CLI tool for managing Makiatto CDN deployments"
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
argh = { workspace = true }
base64 = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
hickory-resolver = { workspace = true }
indicatif = { workspace = true }
indoc = { workspace = true }
miette = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ssh2 = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "time"] }
toml = { workspace = true }
uuid = { workspace = true }
x25519-dalek = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "maki"
path = "src/main.rs"
