[package]
name = "makiatto"
version = { workspace = true }
edition = "2024"
description = "A lightweight CDN for distributing content across multiple servers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/halcyonnouveau/makiatto"
homepage = "https://github.com/halcyonnouveau/makiatto"
documentation = "https://halcyonnouveau.github.io/makiatto/"
readme = "../../README.md"
keywords = ["cdn", "wireguard", "distributed", "mesh", "geolocation"]
categories = ["network-programming", "web-programming"]
publish = false

[dependencies]
# used for hickory handler
# TODO: remove as soon as possible
async-trait = "0.1"

argh = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
crc32fast = { workspace = true }
defguard_wireguard_rs = { workspace = true }
camino = { workspace = true }
corro-agent = { workspace = true }
corro-types = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
geo = { workspace = true }
hickory-proto = { workspace = true }
hickory-resolver = { workspace = true }
hickory-server = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
instant-acme = { workspace = true }
maxminddb = { workspace = true }
miette = { workspace = true }
notify = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tripwire = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
