[package]
name = "makiatto"
description = "A lightweight CDN for distributing content across multiple servers"
readme = "../../README.md"
publish = false
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
# used for hickory handler
# TODO: remove as soon as possible
async-trait = "0.1"

corro-agent = { workspace = true }
corro-types = { workspace = true }
tripwire = { workspace = true }

argh = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
crc32fast = { workspace = true }
defguard_wireguard_rs = { workspace = true }
camino = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
geo = { workspace = true }
hickory-proto = { workspace = true }
hickory-resolver = { workspace = true }
hickory-server = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
imageflow_core = { workspace = true }
imageflow_types = { workspace = true }
instant-acme = { workspace = true }
maxminddb = { workspace = true }
miette = { workspace = true }
moka = { workspace = true }
notify-debouncer-full = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
