[workspace]

[package]
name = "wasm-test-fixtures"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.34"

[package.metadata.component]
package = "makiatto:http-handler"

[package.metadata.component.target]
path = "wit"

[profile.release]
opt-level = "s"
lto = true
strip = true
